charon/tests/ui/simple/dyn-field.rs
//@ known-failure
use std::fmt::Debug;
struct UnsizedStruct {
    x: usize,
    y: dyn Debug,
}
